--- a/data/applications.json
+++ b/data/applications.json
@@ -621,7 +621,7 @@
         },
         {
           "title":"Apocalypse Travel",
-          "url":"http://apocalypsetravel.com/",
+          "url":"http://apocalypsetravel.com",
           "description":"COVID travel restrictions between US states and countries around the world."
         }
       ]
