--- a/data/applications.json
+++ b/data/applications.json
@@ -526,7 +526,7 @@
         },
         {
           "title":"COVIDPorPartido",
-          "url":"https://eduardoconx.github.io/COVIDPorPartido/",
+          "url":"https://eduardoconx.github.io/COVIDPorPartido",
           "description":"Página web para el seguimiento del COVID-19 según los partidos políticos que gobiernan en México."
         }
       ]
