--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -107,7 +107,8 @@
         "akshayajeevan/covid19-us-states",
         "newaaa41/COVID19-Dataset",
         "ozanerturk/covid19-turkey-api",
-        "pranavmishra90/COVID-19"
+        "pranavmishra90/COVID-19",
+        "sociepy/covid19-vaccination-subnational"
       ]
     },
     {
