--- a/data/applications.json
+++ b/data/applications.json
@@ -531,7 +531,7 @@
         },
         {
           "title":"covid19stats",
-          "url":"https://abhishar.herokuapp.com/",
+          "url":"https://abhishar.herokuapp.com",
           "description":"A web applicatiomn for showing map and graph representation for worldwide coronavirus cases."
         }
       ]
