--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -108,7 +108,8 @@
         "newaaa41/COVID19-Dataset",
         "ozanerturk/covid19-turkey-api",
         "pranavmishra90/COVID-19",
-        "sociepy/covid19-vaccination-subnational"
+        "sociepy/covid19-vaccination-subnational",
+        "masdot/cdp-corona-data-project"
       ]
     },
     {
