--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -131,7 +131,8 @@
         "Nu-AI/Livid-About-COVID",
         "Yu-Group/covid19-severity-prediction",
         "lindawangg/COVID-Net",
-        "mmahdigh/covid-risk"
+        "mmahdigh/covid-risk",
+        "healthbadge/episimmer"
       ]
     },
     {
