--- a/data/applications.json
+++ b/data/applications.json
@@ -457,7 +457,7 @@
         {
           "title":"mkvats.science/COVID-19",
           "url":"https://mkvats.science/COVID-19",
-          "description":"डैशबोर्ड तथा स्टैट्स ट्रैकर - भारतीय राज्यों एवं विश्व के देशों के आंकड़ों का विश्लेषण (मैप, डेटा टेबल, टाइमलाइन, रिपोर्ट्स एवं चार्ट्स के माध्यम से)"
+          "description":"डैशबोर्ड तथा स्टैट्स ट्रैकर - भारतीय राज्यों एवं विश्व के देशों के आंकड़ों का विश्लेषण (मैप, डेटा टेबल, टाइमलाइन, रिपोर्ट्स एवं चार्ट्स के माध्यम से)"
         },
         {
           "title":"SaveDemic",
@@ -533,6 +533,11 @@
           "title":"covid19stats",
           "url":"https://abhishar.herokuapp.com",
           "description":"A web applicatiomn for showing map and graph representation for worldwide coronavirus cases."
+        },
+        {
+          "title":"Optimising Lockdowns",
+          "url":"https://optimising-lockdowns.herokuapp.com/",
+          "description":"Optimise multiple lockdowns using a user defined cost function and disease dynamics."
         }
       ]
     },
