Added Zone Pandemic Covid19 - Wordpress Plugin

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -240,7 +240,8 @@
         "ffflorian/exposure-keys",
         "ahmednafies/covid",
         "Coriou/easy-covid-data",
-        "M-Media-Group/Coronavirus-COVID-19-Watch"
+        "M-Media-Group/Coronavirus-COVID-19-Watch",
+        "zekinah/zone-pandemic-covid19"
       ]
     },
     {
