--- a/data/applications.json
+++ b/data/applications.json
@@ -541,7 +541,7 @@
         },
         {
           "title":"HealthBadge",
-          "url":"https://www.healthbadge.org/",
+          "url":"https://www.healthbadge.org",
           "description":"Health management and verification system for communities during epidemic outbreaks."
         }
       ]
