--- a/data/applications.json
+++ b/data/applications.json
@@ -643,6 +643,11 @@
           "title":"Apocalypse Travel",
           "url":"http://apocalypsetravel.com",
           "description":"COVID travel restrictions between US states and countries around the world."
+        },
+        {
+          "title":"NCOVDashboard",
+          "url":"https://quantalabs.github.io/NCOVDashboard/us",
+          "description":"NCOVDashboard is a COVID-19 Dashboard with graphs and data for the US, built with a python backend."
         }
       ]
     }
