add open source map zy6p/covid-19-dashboard

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -163,7 +163,8 @@
         "bustbyte/coronastatus",
         "reach4help/reach4help",
         "Polunom/covid-inc",
-        "yammadev/col-covid-19"
+        "yammadev/col-covid-19",
+        "zy6p/covid-19-dashboard"
       ]
     },
     {
