Add "covidhospitals/covidhospitals" to Map

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -164,7 +164,8 @@
         "reach4help/reach4help",
         "Polunom/covid-inc",
         "yammadev/col-covid-19",
-        "zy6p/covid-19-dashboard"
+        "zy6p/covid-19-dashboard",
+        "covidhospitals/covidhospitals"
       ]
     },
     {
