Added CLI app - c19

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -262,7 +262,8 @@
         "aayush-jaiswal/covid-in",
         "aethe/corona",
         "OpenGene/fastv",
-        "mixon00/cov19-cli"
+        "mixon00/cov19-cli",
+        "xinyangyuan/c19"
       ]
     },
     {
