--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -43,7 +43,8 @@
         "Covid-19-Response-Greece/covid19-greece-api",
         "disease-sh/API",
         "M-Media-Group/Covid-19-API",
-        "OxCGRT/covid-policy-tracker"
+        "OxCGRT/covid-policy-tracker",
+        "fiqryq/Pantaucovid-discord"
       ]
     },
     {
