--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -137,7 +137,8 @@
         "mmahdigh/covid-risk",
         "healthbadge/episimmer",
         "inavamsi/Custom_epidemic_model",
-        "epispot/epispot"
+        "epispot/epispot",
+        "Quantalabs/EpiJS"
       ]
     },
     {
