--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "awesome-coronavirus",
   "version": "1.0.0",
   "description": "Useful projects and resources for COVID-19 (2019 novel Coronavirus)",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "build": "node src/index.js"
+    "build": "ts-node -T src/index.ts"
   },
   "keywords": [
     "awesome-coronavirus",
@@ -18,5 +18,14 @@
     "dotenv": "^8.2.0",
     "ejs": "^2.4.2",
     "github": "^2.1.0"
+  },
+  "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/ejs": "^3.0.7",
+    "@types/github": "^7.1.0",
+    "@types/node": "^16.4.11",
+    "@types/node-fetch": "^2.5.12",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5"
   }
 }
