FIX Node version

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,10 @@ git:
   depth: false
 language: node_js
 node_js:
-  - "10"
+  - "15"
 install:
   - yarn
 script:
-  - yarn run build
+  - yarn build
 after_success:
   - bash src/deploy.sh
