--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -147,7 +147,7 @@
         "jbesomi/Korono",
         "BNext-IQT/antivirals",
         "xyjigsaw/COVID19-KBQA-DEMO"
-        "assemzh/ProbProg-COVID-19"
+        "assemzh/ProbProg-COVID-19",
       ]
     },
     {
