renames username for covid package

--- a/data/open-source-projects.json
+++ b/data/open-source-projects.json
@@ -244,7 +244,7 @@
         "benhur07b/covid19-load-qgis",
         "ghaake/stay-home-snackbar",
         "ffflorian/exposure-keys",
-        "ahmednafies/covid",
+        "nf1s/covid",
         "Coriou/easy-covid-data",
         "M-Media-Group/Coronavirus-COVID-19-Watch",
         "zekinah/zone-pandemic-covid19"
